--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 body {
   background-color: #F4D04E;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+    
 }
 
 .card  {
